--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "react-bootstrap": "^2.0.0-rc.0",
     "react-countup": "^6.0.0",
     "react-dom": "^17.0.0",
-    "react-fade-in": "^2.0.1",
     "react-icons": "^4.2.0",
     "react-image-lightbox": "^5.1.4",
     "react-responsive-masonry": "^2.1.3",
+    "react-reveal": "^1.2.2",
     "react-scroll": "^1.8.4"
   },
   "devDependencies": {
