--- a/package.json
+++ b/package.json
@@ -16,13 +16,15 @@
     "react-image-lightbox": "^5.1.4",
     "react-responsive-masonry": "^2.1.3",
     "react-reveal": "^1.2.2",
-    "react-scroll": "^1.8.4"
+    "react-scroll": "^1.8.4",
+    "vite-plugin-compress": "^2.1.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^1.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-react": "^7.26.0",
     "vite": "^2.5.4",
-    "vite-plugin-eslint": "^1.3.0"
+    "vite-plugin-eslint": "^1.3.0",
+    "vite-plugin-imagemin": "^0.4.6"
   }
 }
