--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "react-image-lightbox": "^5.1.4",
     "react-responsive-masonry": "^2.1.3",
     "react-reveal": "^1.2.2",
-    "react-scroll": "^1.8.4",
-    "vite-plugin-compress": "^2.1.0"
+    "react-scroll": "^1.8.4"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^1.0.0",
